# gpscompass

./: CMakeLists.txt  prj.conf  pyproject.toml  tasks.py
boards/: esp32_devkitc_wroom_procpu.overlay
doc/: imu_i2c_map.txt
src/: main.cpp
tests/display_test/: CMakeLists.txt  prj.conf
tests/display_test/boards/shields/ssd1306/: Kconfig.defconfig  Kconfig.shield  sh1106.overlay  sh1106_128x64.overlay  ssd1306.overlay
tests/display_test/src/: main.cpp
tests/i2c_scan/: CMakeLists.txt  build.sh
tests/i2c_scan/boards/: blackpill_f411ce.overlay
tests/i2c_scan/src/: main.cpp
tests/rtc_test/: .gitignore  CMakeLists.txt  build.sh  prj.conf
tests/rtc_test/boards/: blackpill_f411ce.overlay
tests/rtc_test/src/: main.cpp
